# PromptRoute

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/models/: manifest.json  router.classes.json  router.pk1
apps/desktop/src-tauri/src/: auth.rs  lib.rs  main.rs  router.rs
apps/desktop/src/components/: AuthBar.tsx  Chat.tsx
apps/desktop/src/lib/: api.ts  constants.ts
apps/desktop/src/stores/: authStore.ts  chatStore.ts  settingsStore.ts
docs/: ARCHITECTURE.md
tools/: build-pk1.mjs
