[package]
name = "promptroute"
version = "0.0.1"
description = "PromptRoute desktop"
authors = ["PromptPack"]
edition = "2021"

[lib]
name = "promptroute_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
byteorder = "1.5"
once_cell = "1"
parking_lot = "0.12"
